@@ -5,14 +5,12 @@ import org.apache.commons.io.FileUtils;
 import java.io.File;
 import java.io.IOException;
 import java.text.SimpleDateFormat;
-import java.util.Date;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class BackupCommand extends Command {
 
     public BackupCommand() {
-        super("backup", List.of("COMMAND"));
+        super("backup", Collections.singletonList("COMMAND"));
     }
 
     @Override
@@ -22,15 +20,22 @@ public class BackupCommand extends Command {
             return;
         }
 
-        final File folder = new File(new SimpleDateFormat("yyyy-MM-dd-HH-mm-ss").format(new Date()));
+        final File folder = new File("backup/" + new SimpleDateFormat("yyyy-MM-dd-HH-mm-ss").format(new Date()));
+        final File file = new File("database");
 
         if (!folder.exists())
             folder.mkdir();
 
+        if (Objects.requireNonNull(file.listFiles()).length == 0) {
+            sender.sendInfo("Can't create an backup of empty databases!");
+            return;
+        }
+
         try {
             FileUtils.copyDirectory(new File("database"), folder);
         } catch (IOException e) {
-            e.printStackTrace();
+            sender.sendError("Backup failed!");
+            return;
         }
 
         sender.sendInfo("Successfully created a backup for all databases!");
